--- a/src/main.css
+++ b/src/main.css
@@ -11,6 +11,32 @@ h1 {
   color: #007f8b;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: 60% 40%;
+  grid-template-rows: 30% 70%;
+  gap: 1em;
+  height: 100vh;
+}
+
+.grid-item-1 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+
+  padding: 1em;
+}
+
+.grid-item-2 {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  padding: 1em;
+}
+
+.grid-item-3 {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  padding: 1em;
+}
 
 .output {
   display: none;
@@ -29,6 +55,12 @@ h1 {
 #webcam {
   width: auto;
   height: auto;
+  object-fit: cover;
+}
+
+#webcam-puzzle {
+  height: auto;
+  width: 900px;
   object-fit: cover;
 }
 
@@ -55,3 +87,26 @@ h1 {
 #nextPage {
   color: red;
 }
+
+.puzzle-pieces {
+  right: 0;
+  bottom: 0;
+  display: grid;
+  grid-template-columns: 30% 30% 30%; 
+  grid-template-rows: 30% 30% 30%;
+  gap: 1rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3; /* Ensure it overlays the webcam */
+}
+
+#piece {
+  height: 100px;
+  width: 100px;
+  background-color: rgba(0, 127, 139, 0.5);
+
+}
+
