--- a/src/main.css
+++ b/src/main.css
@@ -12,31 +12,33 @@ body {
   overflow-x: hidden;
 }
 
-.title_home{
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.title_home {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 3rem;
   font-weight: 500;
   text-align: center;
 }
 
-.qr_image{
+.qr_image {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 10rem;
 }
 
-.none{
+.none {
   display: none;
 }
 
-.flex{
+.flex {
   display: flex;
   gap: 2rem;
 }
 
 .instructions {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: linear-gradient(135deg, #ff4b2b, #ff416c);
   padding: 2rem;
   border-radius: 1rem;
@@ -50,7 +52,6 @@ body {
   margin: 2rem auto;
   transition: transform 0.3s ease-in-out;
 }
-
 
 .instructions h2 {
   font-size: 2rem;
@@ -75,12 +76,13 @@ body {
 }
 .home-title {
   font-size: 3rem;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
-  font-weight: 500; 
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 500;
   text-align: center;
 }
 
-.container{
+.container {
   justify-content: center;
   align-items: center;
 }
@@ -117,7 +119,6 @@ body {
 
 .webcam-wrapper {
   position: relative;
-
 }
 
 #webcam-puzzle {
@@ -140,7 +141,7 @@ body {
   right: 0;
   bottom: 0;
   display: grid;
-  grid-template-columns: 30% 30% 30%; 
+  grid-template-columns: 30% 30% 30%;
   grid-template-rows: 30% 30% 30%;
   gap: 1rem;
   position: absolute;
@@ -180,7 +181,6 @@ body {
   border-radius: 50%;
   pointer-events: none;
 }
-
 
 .puzzle-pieces {
   position: absolute;
@@ -231,7 +231,11 @@ body {
   left: -100%;
   width: 300%;
   height: 300%;
-  background: radial-gradient(circle, rgba(255,255,255,0.3) 10%, transparent 10%);
+  background: radial-gradient(
+    circle,
+    rgba(255, 255, 255, 0.3) 10%,
+    transparent 10%
+  );
   transform: translate(-50%, -50%);
   transition: opacity 0.4s ease-in-out;
   opacity: 0;
@@ -261,7 +265,6 @@ body {
     opacity: 0.7;
   }
 }
-
 
 .grid-container {
   display: grid;
@@ -426,4 +429,8 @@ body {
   border-left: 50px solid transparent;
   border-right: 50px solid transparent;
   border-bottom: 100px solid blue;
+}
+
+.info {
+  padding: 5rem;
 }
